Removendo Plugin desnecessário